Fix z-index so hover selector can work

--- a/refactor/components/WalletDetails.module.scss
+++ b/refactor/components/WalletDetails.module.scss
@@ -33,11 +33,8 @@
 
 	label {
 		@include types.subtitle(s2);
-
+		z-index: 1;
 		line-height: 1;
-		&:hover {
-			color: figma-color("Litho Blue");
-		}
 	}
 
 	select {
@@ -48,6 +45,11 @@
 		height: 100%;
 		left: 0;
 		right: 0;
+		z-index: 2;
+
+		&:hover + label {
+			color: figma-color("Litho Blue");
+		}
 	}
 }
 
